--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.0.11",
+    "jsbarcode": "^3.11.6",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
