--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jsbarcode": "^3.11.6",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
