--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.27.0",
     "react-to-print": "^3.0.5",
     "recharts": "^2.15.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
